--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/util/base.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/util/base.scss
@@ -67,6 +67,8 @@ details {
   border: 1px solid $color-default-separator-border;
   border-radius: 10px;
   margin: 5px 0;
+  max-width: 100%;
+  width: 100%;
 
   &[open] {
     summary {
